--- a/example/public/index.html
+++ b/example/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>react-coder</title>
+
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
