add example & docs

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -26,6 +26,8 @@
     -->
     <title>react-coder</title>
 
+    <link rel="stylesheet" href="http://localhost:3000/react-coder/style.css">
+
   </head>
 
   <body>
